--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "bytez.js": "^3.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.7.1",
